--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>11 Proxy Web Gratis untuk Membuka Situs yang Diblokir</h1>
     <p class="subtitle">Solusi cepat tanpa instalasi untuk mengakses konten yang diblokir di jaringan sekolah, kantor, atau ISP — disesuaikan untuk pengguna Indonesia.</p>
 <div class="img-wrap">
-  <img src="img/11-free-proxy-sites.webp" alt="11 Free Proxy Situs" class="responsive-image" />
+  <img src="11-free-proxy-sites.webp" alt="11 Free Proxy Situs" class="responsive-image" />
 </div>
   </header>
 
@@ -29,7 +29,7 @@
       <p><strong>Web proxy</strong> adalah perantara berbasis browser yang mengambil halaman web atas nama Anda. Ia berada di antara perangkat Anda dan situs yang ingin Anda kunjungi, menyamarkan alamat IP Anda dan meneruskan permintaan melalui server proxy. <strong>Proxy web gratis</strong> memungkinkan Anda <strong+membuka situs yang diblokir</strong> dengan cepat tanpa menginstal perangkat lunak atau memerlukan hak administrator. Bagi banyak pengguna di Indonesia, seperti yang menggunakan jaringan kampus atau Wi Fi publik, proxy web sering menjadi cara tercepat untuk melewati penyaringan URL sederhana dan mengakses konten yang dibatasi secara geografis atau platform sosial yang diblokir sementara.</p>
       <p>Panduan ini memuat daftar <strong>11 proxy web gratis untuk membuka situs yang diblokir</strong>, menjelaskan cara kerjanya, dan menunjukkan kapan proxy cocok digunakan dibandingkan alat yang lebih kuat seperti VPN atau Tor. Anda akan mengetahui proxy mana yang mendukung HTTPS, mana yang lebih baik untuk streaming, dan langkah pemeriksaan keamanan sederhana untuk menghindari pencatatan aktivitas atau iklan berbahaya. Jika Anda memerlukan solusi cepat tanpa instalasi untuk melihat halaman yang diblokir, proxy browser biasanya pilihan tercepat. Namun, proxy memiliki batasan termasuk kecepatan, tingkat enkripsi, dan keandalan, jadi artikel ini juga membahas pemecahan masalah dan alternatif yang lebih aman.</p>
 <div class="img-wrap-1">
-  <img src="img/free-proxy-network.webp" alt="Free Proxy Situs" class="responsive-image" />
+  <img src="free-proxy-network.webp" alt="Free Proxy Situs" class="responsive-image" />
 </div>
     </section>
 
