--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="id">
 <head>
+	<meta name="google-site-verification" content="G2XWeWwNS2_21w8CH9JPEUSEzr9L6J8U35nxT4bIjMI" />
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>11 Proxy Web Gratis untuk Membuka Situs yang Diblokir</title>
